2016-04-06 Magnus Hagdorn
 * README.md: updated
 * setup.py: add metadata

2016-04-06 Magnus Hagdorn
 * started ChangeLog
 * use setuptools
 * piccolo2/client/__init__.py: rename module to import
 * piccolo-client.py: ditto