@@ -1,3 +1,8 @@
+2016-04-27 Magnus Hagdorn
+ * piccolo-client.py: add option to use xbee client
+ * piccolo2/client/__init__.py: import xbee client
+ * piccolo2/client/PiccoloXbeeClient.py: first go at implementing xbee client
+
 2016-04-06 Magnus Hagdorn
  * README.md: updated
  * setup.py: add metadata
